Bullets now appear and disappear from view, but have no velocity yet.

--- a/Assignments/Asteroids/Asteroids/Info.plist
+++ b/Assignments/Asteroids/Asteroids/Info.plist
@@ -24,7 +24,8 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
-		<string>space_font.ttf</string>
+		<string>earthorbiter.ttf</string>
+		<string>earthorbiterital.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
